--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,165 +1,2 @@
-body {
-  font-family: "Roboto", sans-serif;
-  line-height: 1.8;
-  scroll-behavior: smooth;
-}
-
-/* For WebKit based browsers (Chrome, Safari) */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(rgb(17, 7, 255), rgb(0, 224, 255));
-}
-
-/* For Firefox */
-::-moz-scrollbar {
-  width: 10px;
-}
-
-::-moz-scrollbar-thumb {
-  background: linear-gradient(rgb(17, 7, 255), rgb(0, 224, 255));
-}
-
-section {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  position: relative;
-}
-
-img {
-  max-width: 100%;
-}
-
-ul li {
-  list-style: none;
-}
-
-:root {
-  /* Brand Color: Vibrant Blue */
-  --brand-color: #2196F3;
-  --brand-color-weak: rgba(33, 150, 243, 0.2);
-  /* Secondary Colors */
-  --secondary-color--blue: #CFD8DC;
-  --secondary-color-coral: #FFAB91;
-  --secondary-color-green: #A5D6A7;
-  --secondary-green-alt: #04D20D;
-  --secondary-color-brown: #E9CBAF;
-  --secondary-color-lilac: #E1BEE7;
-  --lilac-hovered: pink;
-  --secondary-color-orange: #FF8A00;
-  --secondary-color-danger: #DC6803;
-  --secondary-color-yellow: #ffff00;
-  --apercu-rapide-color: green;
-  --text-danger-color: #FFFFCC;
-  --text-color: #727272;
-  --dark-color: #2F2F2F;
-  --facebook-color: #1877f2;
-  --instagram-color: #c32aa3;
-  --youtube-color: #ff0000;
-  --text-grey-color: #A0ABC0;
-  --arrissala-color: #FFF5B8;
-  --text-inside-lilac:#000080;
-  --bigFilter-width: 300px;
-  --littleFilter-width: 50px;
-  --content-color: #eee;
-  --littleFilter-color: #cecece;
-  --login-background-color:#d18742;
-  --link-color: #0052cc;
-  --heart-color: rgba(255, 0, 0, 0.5882352941);
-  --contact-color: #BA68C8;
-  --contact-background: #F8DEFD;
-}
-
-.c-contact {
-  color: #BA68C8 !important;
-}
-
-.c-alt-green {
-  color: var(--secondary-green-alt);
-}
-
-.c-brand {
-  color: var(--brand-color);
-}
-
-.c-text-color {
-  color: var(--text-color);
-}
-
-.c-text-inside-lilac {
-  color: var(--text-inside-lilac);
-}
-
-/* Example usage */
-body {
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-}
-
-.button {
-  background-color: var(--color-accent);
-  color: var(--color-dark);
-}
-
-.c-wheat {
-  color: wheat;
-}
-
-.bg-orange {
-  background-color: var(--orange-color);
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
-}
-
-a {
-  text-decoration: none;
-  transition: all 0.4s ease;
-}
-
-.bg-base {
-  background-color: var(--color-base);
-}
-
-.bg-brand {
-  background-color: var(--brand-color);
-}
-
-.col-lg-custom {
-  width: 20% !important;
-}
-
-textarea {
-  resize: none;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  transform: translateY(-50%) !important;
-}
-
-@media (max-width: 767px) {
-  #mosque {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.my-carousel .owl-carousel .owl-item {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-color: rgba(33, 150, 243, 0.31);
-}/*# sourceMappingURL=main.css.map */
+body{font-family:"Roboto",sans-serif;line-height:1.8;scroll-behavior:smooth}::-webkit-scrollbar{width:10px}::-webkit-scrollbar-thumb{background:-webkit-gradient(linear,left top,left bottom,from(rgb(17,7,255)),to(rgb(0,224,255)));background:linear-gradient(rgb(17,7,255),rgb(0,224,255))}::-moz-scrollbar{width:10px}::-moz-scrollbar-thumb{background:linear-gradient(rgb(17,7,255),rgb(0,224,255))}section{padding-top:50px;padding-bottom:50px;position:relative}img{max-width:100%}ul li{list-style:none}:root{--brand-color:#2196F3;--brand-color-weak:rgba(33,150,243,0.2);--secondary-color--blue:#CFD8DC;--secondary-color-coral:#FFAB91;--secondary-color-green:#A5D6A7;--secondary-green-alt:#04D20D;--secondary-color-brown:#E9CBAF;--secondary-color-lilac:#E1BEE7;--lilac-hovered:pink;--secondary-color-orange:#FF8A00;--secondary-color-danger:#DC6803;--secondary-color-yellow:#ffff00;--apercu-rapide-color:green;--text-danger-color:#FFFFCC;--text-color:#727272;--dark-color:#2F2F2F;--facebook-color:#1877f2;--instagram-color:#c32aa3;--youtube-color:#ff0000;--text-grey-color:#A0ABC0;--arrissala-color:#FFF5B8;--text-inside-lilac:#000080;--bigFilter-width:300px;--littleFilter-width:50px;--content-color:#eee;--littleFilter-color:#cecece;--login-background-color:#d18742;--link-color:#0052cc;--heart-color:rgba(255,0,0,0.5882352941);--contact-color:#BA68C8;--contact-background:#F8DEFD}.c-contact{color:#BA68C8!important}.c-alt-green{color:var(--secondary-green-alt)}.c-brand{color:var(--brand-color)}.c-text-color{color:var(--text-color)}.c-text-inside-lilac{color:var(--text-inside-lilac)}body{background-color:var(--color-primary);color:var(--color-secondary)}.button{background-color:var(--color-accent);color:var(--color-dark)}.c-wheat{color:wheat}.bg-orange{background-color:var(--orange-color)}h1,h2,h3,h4,h5,h6{font-weight:700}a{text-decoration:none;-webkit-transition:all 0.4s ease;transition:all 0.4s ease}.bg-base{background-color:var(--color-base)}.bg-brand{background-color:var(--brand-color)}textarea{resize:none}@media (min-width:992px){.col-sidebar{-webkit-box-flex:1;-ms-flex:1;flex:1;width:20%}.col-n-sidebar{-webkit-box-flex:1;-ms-flex:1;flex:1;width:25%}}@media (max-width:991px) and (min-width:768px){.col-sidebar{-webkit-box-flex:0;-ms-flex:0 0 auto;flex:0 0 auto;width:33.33%}.col-n-sidebar{-webkit-box-flex:0;-ms-flex:0 0 auto;flex:0 0 auto;width:50%}}@media (max-width:767px){.col-n-sidebar,.col-sidebar{-webkit-box-flex:0;-ms-flex:0 0 auto;flex:0 0 auto;width:100%}}@media (max-width:991px){.col-sm-md-12{-webkit-box-flex:0!important;-ms-flex:0 0 auto!important;flex:0 0 auto!important;width:100%!important}.justify-content-center-sm-md{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}}.swiper-button-next,.swiper-button-prev{-webkit-transform:translateY(-50%)!important;transform:translateY(-50%)!important}@media (max-width:767px){#mosque{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}}.my-carousel .owl-carousel .owl-item{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;justify-items:center}.overlay{position:absolute;width:100%;height:100%;left:0;top:0;background-color:rgba(33,150,243,0.31)}
+/*# sourceMappingURL=main.css.map */
