--- a/src/scss/layout/_global-rules.scss
+++ b/src/scss/layout/_global-rules.scss
@@ -82,6 +82,8 @@ ul li{
     --heart-color: rgba(255, 0, 0, 0.5882352941);
     --contact-color: #BA68C8;
     --contact-background: #F8DEFD;
+    --upNavbar-height: 47px;
+    --NavInter-height: 90px
   }
 .c-contact {
   color: #BA68C8 !important
