--- a/src/scss/layout/_global-rules.scss
+++ b/src/scss/layout/_global-rules.scss
@@ -83,7 +83,8 @@ ul li{
     --contact-color: #BA68C8;
     --contact-background: #F8DEFD;
     --upNavbar-height: 47px;
-    --NavInter-height: 90px
+    --NavInter-height: 90px;
+    --login-bg: #D18742;
   }
 .c-contact {
   color: #BA68C8 !important
