--- a/src/scss/layout/_global-rules.scss
+++ b/src/scss/layout/_global-rules.scss
@@ -87,6 +87,9 @@ ul li{
     --upNavbar-height: 47px;
     --NavInter-height: 90px;
     --login-bg: #D18742;
+    --livres-color: #BD324A;
+    --ecritures-color: #4CAF50;
+
   }
 .c-contact {
   color: #BA68C8 !important
@@ -123,7 +126,9 @@ color: var(--secondary-green-alt);
 .bg-orange{
     background-color: var(--orange-color);
 }
-
+.bg-secondary-color-danger {
+  background-color: var(--secondary-color-danger);
+}
 
 h1,h2,h3,h4,h5,h6 {
     
